# Bootstraper

./: .clangd  .envrc  .gitignore  CMakeLists.txt  COROUTINE_RDMA_DEVELOPER_GUIDE.md  README.md  debug_backtrace.sh  justfile  pixi.toml  tensor_transfer_test26.txt  variants.yaml
.cache/clangd/index/: 32.h.B5E31AB213195571.idx  64.h.79C1B63B713E3F52.idx  O1_size.hpp.541A43EB30EF558E.idx  O1_size_fwd.hpp.2BDF8C49EAE9026E.idx  O1_size_impl.hpp.87AF8CBA5F567142.idx  _cassert.h.43CE8EE5B76BB01A.idx  _exception.h.AA8D7F8A1D2314D9.idx  _prefix.h.0D57818CB71C091E.idx  _prefix.h.F1B35CA16B6D82BC.idx  abi_prefix.hpp.D17B94E447D64054.idx  abi_suffix.hpp.D2DF716022824089.idx  abort_on_ebadf.hh.9336B81E47B9E618.idx  abort_on_expiry.hh.2E489814D9788C1B.idx  abort_source.hh.4F4B59B8ACF77FC9.idx  abortable_fifo.hh.B832B7AF1DED115E.idx  adaptive_merge.hpp.08225BE22F6FD63E.idx  adaptive_sort_merge.hpp.A03A0A1177D1D3DD.idx  add.hpp.A9B330C160177199.idx  add_const.hpp.B2348D04800945E1.idx  add_pointer.hpp.6B71D91BAE5A548D.idx  add_reference.hpp.11C44DF15C857A10.idx  add_rvalue_reference.hpp.E34791DE3C513268.idx  add_volatile.hpp.0882E46C557272D8.idx  addressof.hpp.46899CFE349DFE94.idx  addressof.hpp.7D16EEAC0E53A5B0.idx  addressof.hpp.82631AE6A90E04AF.idx  adjust_functors.hpp.CAF9F4B3E031EB26.idx  adl.hpp.059896016299D0D5.idx  adl_barrier.hpp.6FE16007DD5C65E6.idx  adl_move_swap.hpp.77021F344A1F89FB.idx  adt.hpp.9493BC5DA1D4526E.idx  advanced_insert_int.hpp.C8EBF3CB26B41239.idx  aix.h.C098AD2D61E7DDA2.idx  algo_type.hpp.069037563806BF35.idx  algorithm.6EF95B6B4BFF7FD3.idx  algorithm.hpp.0D5F8AA55649AF0D.idx  algorithm.hpp.7301A0659576B4BF.idx  algorithm.hpp.8B1627DF3F84C068.idx  algorithmfwd.h.7C8871071A755433.idx  align.h.C86C0E6CA3A53E60.idx  (+1275 more)
include/: commom.hpp  coroutine_rdma_manager.hpp  fast_channel_manager.hpp  log_utils.hpp  pcq.hpp  simple_rpc.hpp
include/bootstrap/: unique_id.hpp  unique_id_client.hpp  unique_id_exchange.hpp  unique_id_server.hpp
include/coucxx/: co_tag.hpp
include/coucxx/coroutine/: tag_operations.hpp
include/demo/: endpoint_manager.hpp  p2p_communication.hpp  p2p_manager.hpp  rdma_client.hpp  rdma_rpc_benchmark.hpp  rdma_server.hpp
include/rpc/: commom.hpp  coroutine_rdma_manager.hpp  independent_rdma_manager.hpp  rpc_benchmark_utils.hpp  rpc_client.hpp  rpc_common.hpp  rpc_serializer.hpp  rpc_server.hpp  tensor_transfer.hpp  tensor_transfer_backend.hpp
logs/: rpc_benchmark.txt
scripts/: build_and_run_ucxx_test.sh  debug_backtrace.sh  run_benchmark.sh
src/: CMakeLists.txt  boilerplate.cpp  contiuation.cpp  coroutine_rdma_manager.cpp  fast_channel_manager.cpp  fast_vfuture.cpp  generator.cpp  lambda_coroutine.cpp  parasleep.cpp  server.cpp  tensor_tansfer.cpp  tensor_transfer_demo.cpp  ucxx_test.cpp
src/bootstrap/: README.md  unique_id_client.cpp  unique_id_exchange.cpp  unique_id_server.cpp
src/coucxx/: CMakeLists.txt  co_tag.cpp  coucxx_test.cpp  ucxx_test.cpp  ucxx_thread_manager.cpp
src/coucxx/coroutine/: README.md  tag_operations.cpp
src/coucxx/example/: CMakeLists.txt  coroutine_tag_example.cpp
src/demo/: README.md  benchmark_main.cpp  endpoint_manager.cpp  p2p_manager.cpp  p2p_rdma_demo.cpp  rdma_client.cpp  rdma_rpc_benchmark.cpp  rdma_seastar_demo.cpp  rdma_server.cpp  rpc_seastar.cpp  simple_benchmark.cpp
src/examples/: concurrency_corr.cpp  do_with_example.cpp  echo_server.cpp  echo_server_adv.cpp  echo_server_corr.cpp  generator_seastar.cpp  parallel_corr.cpp  promise.cpp  sharded_service.cpp  simple_client.cpp  simple_server.cpp  simplest.cpp  slow_vfuture.cpp  tcp_client.cpp  tcp_server.cpp  unique_id_exchange_example.cpp
src/rpc/: CMakeLists.txt  coroutine_rdma_example.cpp  coroutine_rdma_manager.cpp  coroutine_tag_matching_example.cpp  eg.cpp  independent_rdma_example.cpp  independent_rdma_manager.cpp  rdma_thread_manager.cpp  rpc_client.cpp  rpc_runner.cpp  rpc_server.cpp  server.cpp  simple_coroutine_test.cpp  simple_rpc.cpp  tag_matching_example.cpp  tensor_coroutines.cpp  tensor_transfer.cpp  tensor_transfer_backend.cpp  tensor_transfer_example.cpp  tensor_transfer_rdma.cpp  tensor_transfer_rdma_example.cpp  tensor_transfer_rpc.cpp
src/testing/: futurechain.cpp
src/ucxx/: CMakeLists.txt  basic.cpp
test/benchmark/: CMakeLists.txt  README.md  buffer_allocation_benchmark.cpp  cuda_ipc_tag_benchmark.cpp  perftest.cpp  test_client.cpp  test_server.cpp
test/example/: CMakeLists.txt  example.cpp
